force-app/main/default/objects/VCG_CPQ_Product_Incompatibility__c/VCG_CPQ_Product_Incompatibility__c.object-meta.xml
<CustomObject>
    <label>VCG CPQ Product Incompatibility</label>
    <nameField>
        <label>VCG CPQ Product Incompatibility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VCG CPQ Product Incompatibilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>