force-app/main/default/objects/VCG_CPQ_Product_Incompatibility__c/fields/Product_1__c.field-meta.xml
<CustomField>
    <fullName>Product_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product 1</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>VCG CPQ Product Incompatibilities</relationshipLabel>
    <relationshipName>VCG_CPQ_Product_Incompatibilities</relationshipName>
    <type>Lookup</type>
</CustomField>