force-app/main/default/objects/VCG_CPQ_Product_Incompatibility__c/fields/Product_2__c.field-meta.xml
<CustomField>
    <fullName>Product_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product 2</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>VCG CPQ Product Incompatibilities (Product 2)</relationshipLabel>
    <relationshipName>VCG_CPQ_Product_Incompatibilities1</relationshipName>
    <type>Lookup</type>
</CustomField>