force-app/main/default/objects/VCG_CPQ_Product_Incompatibility__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_1__c</columns>
    <columns>Product_2__c</columns>
    <columns>Scope__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>